--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.2",
   "description": "An easy to use and spritely CSS framework.",
   "homepage": "http://voident.github.io",
-  "repository": "voident/ghast",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/voident/ghast.git"
+  },
   "license": "MIT",
   "author": "Marc Boisvert <bladetecltd@gmail.com>",
-  "main": "dist/ghast.css",
+  "main": "app/ghast.css",
   "keywords": [
     "bootstrap",
     "css",
