--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ghast",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "An easy to use and spritely CSS framework.",
   "homepage": "http://voident.github.io",
   "repository": {
@@ -52,6 +52,7 @@
     "bower": "^1.6.8",
     "browser-sync": "^2.11.1",
     "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-clean": "^0.3.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
