--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ghast",
-  "version": "0.0.4",
-  "description": "An easy to use and spritely CSS framework.",
+  "version": "0.0.5",
+  "description": "A terrifyingly simple CSS framework.",
   "homepage": "http://voident.github.io",
   "repository": {
     "type": "git",
@@ -51,9 +51,9 @@
   "devDependencies": {
     "bower": "^1.6.8",
     "browser-sync": "^2.11.1",
+    "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-clean": "^0.3.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0"
