--- a/package.json
+++ b/package.json
@@ -54,9 +54,12 @@
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-myth": "^1.1.0",
+    "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "postcss-cssnext": "^2.5.2"
   },
   "engines": {
     "node": ">=0.12.0"
