--- a/package.json
+++ b/package.json
@@ -45,13 +45,11 @@
     "src",
     "test"
   ],
-  "dependencies": {
-    "normalize.css": "latest"
-  },
   "devDependencies": {
-    "bower": "^1.6.8",
     "browser-sync": "^2.11.1",
     "del": "^2.2.0",
+    "fly": "^1.2.4",
+    "fly-sass": "^0.3.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-rename": "^1.2.2",
