--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "ghast",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "A terrifyingly simple CSS framework.",
-  "homepage": "http://voident.github.io",
+  "homepage": "https://impria.github.io",
   "repository": {
     "type": "git",
-    "url": "https://github.com/voident/ghast.git"
+    "url": "https://github.com/impria/ghast.git"
   },
   "license": "MIT",
   "author": "Marc Boisvert <bladetecltd@gmail.com>",
-  "main": "app/ghast.css",
+  "main": "css/ghast.css",
   "keywords": [
     "bootstrap",
     "css",
