--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 sudo: false
 language: node_js
 node_js:
-  - 0.12
+  - 6.3.1
 before_install:
   - gem update --system
   - gem install sass
-  - npm install grunt-cli --global
+  - npm install gulp --global
