--- a/package.json
+++ b/package.json
@@ -46,14 +46,14 @@
     "test"
   ],
   "devDependencies": {
-    "browser-sync": "^2.11.1",
     "del": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.1",
     "gulp-sass-lint": "^1.1.1",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-watch": "^4.3.9"
   },
   "engines": {
     "node": ">=0.12.0"
