Fix attribute selectors

--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -37,7 +37,7 @@ rules:
   final-newline:
     - 1
     - include: true
-  force-attribute-nesting: 1
+  force-attribute-nesting: 0
   force-element-nesting: 1
   force-pseudo-nesting: 0
   function-name-format:
@@ -81,7 +81,7 @@ rules:
   # TODO: Take closer look at each specific type
   no-qualifying-elements:
     - 1
-    - allow-element-with-attribute: false
+    - allow-element-with-attribute: true
       allow-element-with-class: false
       allow-element-with-id: false
   no-trailing-zero: 0
