--- a/.npmignore
+++ b/.npmignore
@@ -1,14 +1,5 @@
-.editorconfig
-.gitignore
-.npmignore
 .travis.yml
-bower.json
-component.json
-composer.json
 contributing.md
 gulpfile.js
-package.js
-package.json
-src
-test
+yarn.lock
 app
